2001-05-25  Martin Buchholz  <martin@xemacs.org>

	* process-unix.c (unix_canonicalize_host_name): Fix compile warnings.
	(unix_open_network_stream): Likewise.
	* sound.h (sound_perror): Likewise.
	(sound_warn): Likewise.
	* emodules.c (emodules_load): Likewise.
	* fns.c (base64_conversion_error): Likewise.
	* tooltalk.c (check_status): Likewise.
	* eldap.c (Fldap_open): Likewise.
	* hpplay.c (player_error_internal): Likewise.
	* win32.c (tstr_to_local_file_format): Likewise.

	* realpath.c: This file doesn't deal with internal
	representation.  Define DONT_ENCAPSULATE.
	Fixes crash in test suite.

	* print.c (print_internal): Fix compile error.

	* miscplay.c (waverequire): Don't inline.
	Gcc can't inline functions that call alloca.

2001-05-24  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* gui.c (gui_error_2): New function.
	* lisp.h (gui_error_2): Declare it.

2001-05-24  Norbert Koch  <nk@LF.net>

	* doprnt.c (emacs_doprnt_1): forgotten sons of Ben's error patch

2001-05-06  Karl M. Hegbloom  <karlheg@hegbloom.net>

	* config.h.in: HAVE_MKSTEMP

2001-05-24  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mule-ccl.c (Qccl_error): New error
	* mule-ccl.c (syms_of_mule_ccl): Initialize Qccl_error.
	* mule-charset.c (Fmake_charset): Call signal_error.

2001-05-24  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* buffer.c (Qtext_conversion_error): Moved from file-coding.c
	so that --with-file-coding=no will compile corectly.
	* buffer.c (syms_of_buffer): Define Qtext_conversion_error.
	Also moved from file-coding.c
	* file-coding.c (Qtext_conversion_error): Moved to buffer.c
	* file-coding.c (syms_of_file_coding): Moved Qtext_conversion_error
	initialization to buffer.c
	* emodules.c (Qdll_error): New error.
	* emodules.c (syms_of_module): Declare Qdll_error.

	* esd.c (esd_play_sound_data): sound_warn accepts only one arg.
	* miscplay.c (sndcnv8S_2mono):
	* miscplay.c (sndcnv2monounsigned):
	* miscplay.c (int2ulaw):
	* miscplay.c (sndcnv2byteLE):
	* miscplay.c (sndcnv2byteBE):